# HistoMILTrainer

./: .gitignore  README.md  environment.yml  grid_search.py  main.py  make_splits.py  pyproject.toml
.github/workflows/: test.yml
histomil/: __init__.py  cli.py  datasets.py  grid_search.py  heatmap.py  models.py  predict.py  splits.py  train.py  utils.py
histomil/configs/: __init__.py
notebooks/: analyze_results.ipynb
tests/: test_classes.py  test_import.py
