[tool.poetry]
name = "histomil"
version = "1.1"
description = "A library for training Multi-Instance Learning (MIL) architectures from MIL-Lab on histology datasets"
authors = ["Gabriel Cabas <gabriel.cabas@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/digenoma-lab/HistoMILTrainer"
repository = "https://github.com/digenoma-lab/HistoMILTrainer"
keywords = ["histology", "multiple-instance-learning", "deep-learning", "medical-imaging", "wsi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Note: All runtime dependencies (torch, numpy, pandas, scikit-learn, tqdm, h5py, etc.)
# are provided by MIL-Lab, which must be installed first (See README.md)

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
src = {git = "https://github.com/GabrielCabas/MIL-Lab.git"} #Update when PR is merged
topk = {git = "https://github.com/oval-group/smooth-topk.git"} # Required for CLAM
seaborn = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"
mypy = "^0.991"

# Scripts can be added here if CLI commands are created in the future
[tool.poetry.scripts]
# histomil-train = "histomil.cli:train"
# histomil-splits = "histomil.cli:splits"
histomil-splits = "histomil.cli:make_splits"
histomil-grid = "histomil.cli:grid_search"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::FutureWarning:timm.*",
    "ignore::DeprecationWarning:torch_geometric.*",
]

